--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		// Disabled because of https://github.com/Microsoft/TypeScript/issues/29172
 		// "outDir": "dist",
 
-		"module": "ESNext",
+		"module": "ES2020",
 		"target": "ES2019", // Node.js 12
 		"lib": [
 			"ES2019",
